--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.1.1
+version = 0.1.2
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -26,6 +26,7 @@ classifiers =
 include_package_data = True
 install_requires =
     Django>=3.1
+    django-ckeditor>=6.0.0
 packages = find:
 zip_safe = True
 
