Add application, fix Django3.2 warning about auto field, move 'lead' fields into 'SEO' admin section, update their help text and reboot migrations

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.1.5
+version = 0.1.6
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -21,6 +21,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Framework :: Django
     Framework :: Django :: 3.1
+    Framework :: Django :: 3.2
 
 [options]
 include_package_data = True
@@ -77,12 +78,13 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py36-django{31}-cms
+envlist = py36-django{31,32}-cms
 
 [testenv]
 
 deps =
     django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<3.3
 
 commands =
     pip install -e .[dev]
