--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.2.0
+version = 0.3.0
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -13,12 +13,15 @@ url = https://github.com/emencia/django-blog-lotus
 license = MIT
 keywords = Python Django
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Framework :: Django
     Framework :: Django :: 3.1
     Framework :: Django :: 3.2
@@ -44,6 +47,7 @@ dev =
     sphinx-rtd-theme
     livereload
     twine
+    tox
 
 [options.packages.find]
 where = .
@@ -78,7 +82,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py36-django{31,32}-cms
+envlist = py{36,37,38,39}-django{31,32}-cms
 
 [testenv]
 
