--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.4.0
+version = 0.4.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -35,6 +35,8 @@ packages = find:
 zip_safe = True
 
 [options.extras_require]
+breadcrumbs =
+    django-view-breadcrumbs>=2.2.1
 dev =
     pillow>=7.2.0
     flake8
@@ -91,5 +93,5 @@ deps =
     django32: Django>=3.2,<3.3
 
 commands =
-    pip install -e .[dev]
+    pip install -e .[breadcrumbs,dev]
     pytest -vv tests
