--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "lotus-sandbox-frontend",
-    "version": "0.1.0",
+    "version": "0.2.0",
     "description": "Lotus sandbox frontend assets building. This is just about to install Bootstrap and build CSS.",
     "author": "David THENON <sveetch@gmail.com>",
     "private": true,
@@ -11,10 +11,12 @@
     },
     "dependencies": {
         "autoprefixer": "^10.3.0",
-        "bootstrap": "^5.0.2",
-        "bootstrap-icons": "^1.5.0",
+        "bootstrap": "^5.1.3",
+        "bootstrap-icons": "^1.7.0",
         "node-sass": "^6.0.1",
-        "nodemon": "^2.0.12"
+        "nodemon": "^2.0.12",
+        "postcss": "^8.3.11",
+        "postcss-cli": "^9.0.1"
     },
     "devDependencies": {},
     "engines": {
