--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.4.4
+version = 0.5.0-pre.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -13,7 +13,7 @@ url = https://github.com/emencia/django-blog-lotus
 license = MIT
 keywords = Python Django
 classifiers =
-    Development Status :: 3 - Alpha
+    Development Status :: 4 - Beta
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Natural Language :: English
