--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.0-pre.2
+version = 0.5.0-pre.4
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -29,7 +29,7 @@ classifiers =
 [options]
 include_package_data = True
 install_requires =
-    Django>=3.1
+    Django>=3.1,<4.0
     django-ckeditor>=6.0.0
 packages = find:
 zip_safe = True
