--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.0-pre.7
+version = 0.5.0-pre.8
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -18,7 +18,6 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
@@ -39,17 +38,19 @@ breadcrumbs =
     django-view-breadcrumbs>=2.2.4
 dev =
     pillow>=8.0.0
-    flake8
     pytest
     pytest-django
     factory-boy
     pyquery
     freezegun
+quality =
+    flake8
+    twine
+    tox
+doc =
     sphinx
     sphinx-rtd-theme
     livereload
-    twine
-    tox
 
 [options.packages.find]
 where = .
@@ -84,7 +85,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{36,37,38,39}-django{31,32}-cms
+envlist = py{37,38,39}-django{31,32}-cms
 
 [testenv]
 
