--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.0-pre.10
+version = 0.5.0-pre.11
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -24,11 +24,13 @@ classifiers =
     Framework :: Django
     Framework :: Django :: 3.1
     Framework :: Django :: 3.2
+    Framework :: Django :: 4.0
+    Framework :: Django :: 4.1
 
 [options]
 include_package_data = True
 install_requires =
-    Django>=3.1,<4.0
+    Django>=3.1,<4.2
     django-ckeditor>=6.0.0
 packages = find:
 zip_safe = True
@@ -85,13 +87,15 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{38,39,310}-django{31,32}-cms
+envlist = py{38,310}-django{31,40,41}-cms
 
 [testenv]
 
 deps =
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    django40: Django>=4.0,<4.1
+    django41: Django>=4.1,<4.2
 
 commands =
     pip install -e .[breadcrumbs,dev]
