[NEW] Changed models to use custom upload_to for filename uniqueness
- Added file utilities to set a random unique filename from FileField.upload_to
- Rebooted migration and finished hashed image filenames feature

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.0-pre.13
+version = 0.5.0-pre.15
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -11,7 +11,7 @@ author = Emencia
 author_email = support@emencia.com
 url = https://github.com/emencia/django-blog-lotus
 license = MIT
-keywords = Python Django
+keywords = Python Django Blog
 classifiers =
     Development Status :: 4 - Beta
     Intended Audience :: Developers
