--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.0-pre.18
+version = 0.5.0-pre.19
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -31,7 +31,6 @@ include_package_data = True
 install_requires =
     Django>=3.1,<4.2
     django-ckeditor>=6.0.0
-    django-ckeditor>=6.0.0
     django-smart-media
 packages = find:
 zip_safe = True
@@ -51,8 +50,8 @@ quality =
     twine
     tox
 doc =
-    sphinx
-    sphinx-rtd-theme
+    sphinx>=4.3.0
+    sphinx-rtd-theme==1.1.0
     livereload
 
 [options.packages.find]
