--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.0
+version = 0.5.1-pre.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
