--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ include_package_data = True
 install_requires =
     Django>=3.1,<4.2
     django-ckeditor>=6.0.0
+    django-taggit>=3.1.0
     django-smart-media
 packages = find:
 zip_safe = True
