--- a/setup.cfg
+++ b/setup.cfg
@@ -32,6 +32,7 @@ install_requires =
     Django>=3.1,<4.2
     django-ckeditor>=6.0.0
     django-taggit>=3.1.0
+    django-autocomplete-light>=3.9.4
     django-smart-media
 packages = find:
 zip_safe = True
