--- a/setup.cfg
+++ b/setup.cfg
@@ -3,13 +3,18 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.1-pre.8
+version = 0.5.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
 author = Emencia
 author_email = support@emencia.com
 url = https://github.com/emencia/django-blog-lotus
+project_urls =
+    Source Code = https://github.com/emencia/django-blog-lotus
+    Issue Tracker = https://github.com/emencia/django-blog-lotus/issues
+    Changelog = https://django-blog-lotus.readthedocs.io/en/latest/history.html
+    Documentation = https://django-blog-lotus.readthedocs.io/
 license = MIT
 keywords = Python Django Blog
 classifiers =
@@ -33,7 +38,7 @@ install_requires =
     django-ckeditor>=6.0.0
     django-taggit>=3.1.0
     django-autocomplete-light>=3.9.4
-    django-smart-media
+    django-smart-media>=0.2.2
 packages = find:
 zip_safe = True
 
