[NEW] Added Django 4.2 support

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.5.3-pre.9
+version = 0.5.3-pre.10
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -30,11 +30,13 @@ classifiers =
     Framework :: Django :: 3.2
     Framework :: Django :: 4.0
     Framework :: Django :: 4.1
+    Framework :: Django :: 4.2
 
 [options]
+python_requires = >=3.8
 include_package_data = True
 install_requires =
-    Django>=3.1,<4.2
+    Django>=3.2,<5.0
     django-ckeditor>=6.0.0
     django-taggit>=3.1.0
     django-autocomplete-light>=3.9.7
@@ -94,14 +96,14 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{38,310}-django{32,40,41}-cms
+envlist = py{38,310}-django{32,40,42}-cms
 
 [testenv]
 
 deps =
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
-    django41: Django>=4.1,<4.2
+    django42: Django>=4.2,<5.0
     py38-django32: backports.zoneinfo
 
 commands =
