--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,7 +19,7 @@
         "@popperjs/core": "^2.9.3",
         "autoprefixer": "^10.3.0",
         "babel-loader": "^8.2.2",
-        "bootstrap": "^5.1.3",
+        "bootstrap": "==5.2.3",
         "bootstrap-icons": "^1.8.0",
         "jquery": "^3.6.0",
         "lodash": "^4.17.21"
