--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.6.0-pre.11
+version = 0.6.0-pre.12
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -96,7 +96,7 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{38,310}-django{32,40,42}-cms
+envlist = py{38,310}-django{32,40,42}
 
 [testenv]
 
