[NEW] Addedd readonly API with DRF

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.6.1
+version = 0.7.0-pre.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -45,6 +45,8 @@ packages = find:
 zip_safe = True
 
 [options.extras_require]
+api =
+    djangorestframework>=3.14.0
 breadcrumbs =
     django-view-breadcrumbs>=2.2.4
 dev =
@@ -96,15 +98,14 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{38,310}-django{32,40,42}
+envlist = py{38,310}-django{32,42}-{no_api,api}
 
 [testenv]
-
 deps =
     django32: Django>=3.2,<3.3
-    django40: Django>=4.0,<4.1
     django42: Django>=4.2,<5.0
     py38-django32: backports.zoneinfo
+    api: djangorestframework>=3.14.0
 
 commands =
     pip install -e .[breadcrumbs,dev]
