[NEW] Started API with DRF in readonly

--- a/setup.cfg
+++ b/setup.cfg
@@ -45,6 +45,8 @@ packages = find:
 zip_safe = True
 
 [options.extras_require]
+api =
+    djangorestframework>=3.14.0
 breadcrumbs =
     django-view-breadcrumbs>=2.2.4
 dev =
