[CHG] Ensure API is optional depending DRF is installed or not

--- a/setup.cfg
+++ b/setup.cfg
@@ -98,15 +98,14 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{38,310}-django{32,40,42}
+envlist = py{38,310}-django{32,42}-{no_api,api}
 
 [testenv]
-
 deps =
     django32: Django>=3.2,<3.3
-    django40: Django>=4.0,<4.1
     django42: Django>=4.2,<5.0
     py38-django32: backports.zoneinfo
+    api: djangorestframework>=3.14.0
 
 commands =
     pip install -e .[breadcrumbs,dev]
