--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.7.0-pre.3
+version = 0.7.0-pre.4
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -61,8 +61,10 @@ quality =
     twine
     tox
 doc =
-    sphinx>=4.3.0
-    sphinx-rtd-theme==1.1.0
+    sphinx
+    furo==2023.7.26
+    sphinx-copybutton==0.5.2
+doc-live =
     livereload
 
 [options.packages.find]
