[CHG] Pinned 'django-taggit' to '<5.0.0' until next release branch to maintain Django 4.0 support for now

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.8.0-pre.3
+version = 0.8.0-pre.4
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -38,7 +38,7 @@ include_package_data = True
 install_requires =
     Django>=3.2,<5.0
     django-ckeditor>=6.0.0
-    django-taggit>=3.1.0
+    django-taggit<5.0.0
     django-autocomplete-light>=3.9.7
     django-smart-media>=0.2.2
 packages = find:
