[WIP] Tried to enable django-spectacular, it works but needs some adjustment, see #63

--- a/setup.cfg
+++ b/setup.cfg
@@ -54,6 +54,8 @@ zip_safe = True
 [options.extras_require]
 api =
     djangorestframework>=3.14.0
+api-beautifier =
+    drf-spectacular[sidecar]>=0.26.5
 breadcrumbs =
     django-view-breadcrumbs>=2.2.4
 dev =
