--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.8.1-pre.2
+version = 0.8.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -97,8 +97,6 @@ python_files =
     *.py
 testpaths =
     tests
-filterwarnings =
-    ignore::django.utils.deprecation.RemovedInDjango51Warning
 
 [tox:tox]
 minversion = 3.4.0
