[WIP] Added treebeard usage to try implementation of Category tree, almost all tests are passing but there is no treebeard querying yet

--- a/setup.cfg
+++ b/setup.cfg
@@ -41,6 +41,7 @@ install_requires =
     django-taggit<5.0.0
     django-autocomplete-light>=3.9.7
     django-smart-media>=0.2.2
+    django-treebeard>=4.7.1
 packages = find:
 zip_safe = True
 
