[CHG] Divided admin form tests from admin view tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -94,7 +94,7 @@ exclude =
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = sandbox.settings.tests
-addopts = -vv
+addopts = -v --tb=long
 python_files =
     *.py
 testpaths =
