[CHG] Updated Category serializer and its tests to include 'parent' and added 'drf-redesign' to sandbox

--- a/setup.cfg
+++ b/setup.cfg
@@ -68,6 +68,8 @@ doc =
     sphinx-copybutton==0.5.2
 doc-live =
     livereload
+sandbox =
+    drf-redesign>=0.4.0
 
 [options.packages.find]
 where = .
