--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.9.0-pre.4
+version = 0.9.0-pre.5
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -57,6 +57,7 @@ dev =
     factory-boy
     pyquery
     freezegun
+    diskette>=0.3.6
     bigtree
 quality =
     flake8
