[CHG] Added minimal requirement versions to help Pip resolving

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.9.0-pre.6
+version = 0.9.0-pre.8
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -36,7 +36,7 @@ classifiers =
 python_requires = >=3.8
 include_package_data = True
 install_requires =
-    Django>=3.2,<5.0
+    django>=3.2,<5.0
     django-ckeditor>=6.0.0
     django-taggit<5.0.0
     django-autocomplete-light>=3.9.7
@@ -52,22 +52,25 @@ breadcrumbs =
     django-view-breadcrumbs>=2.2.4
 dev =
     pillow>=8.0.0
-    pytest
-    pytest-django
-    factory-boy
-    pyquery
-    freezegun
+    pytest>=7.0
+    pytest-django>=4.5.2
+    factory-boy>=3.3.0
+    pyquery>=2.0.0
+    freezegun>=1.2.0
     diskette>=0.3.6
+frontend =
+    boussole>=2.1.2
 quality =
-    flake8
-    twine
-    tox
+    flake8>=6.0.0
+    tox>=4.11.0
 doc =
-    sphinx
-    furo==2023.7.26
-    sphinx-copybutton==0.5.2
+    sphinx>=8.0.2
+    furo>=2024.8.6
+    sphinx-copybutton>=0.5.2
 doc-live =
-    livereload
+    livereload>=2.6.0
+release =
+    twine>=5.0.0
 sandbox =
     drf-redesign>=0.4.0
 
