--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.9.0-pre.9
+version = 0.9.0-pre.10
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -19,6 +19,7 @@ license = MIT
 keywords = Python Django Blog
 classifiers =
     Development Status :: 5 - Production/Stable
+    Operating System :: OS Independent
     Intended Audience :: Developers
     License :: OSI Approved :: MIT License
     Natural Language :: English
@@ -31,6 +32,9 @@ classifiers =
     Framework :: Django :: 4.0
     Framework :: Django :: 4.1
     Framework :: Django :: 4.2
+    Intended Audience :: Developers
+    Topic :: Internet :: WWW/HTTP
+    Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
 python_requires = >=3.8
