--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.9.0-pre.10
+version = 0.9.0
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -24,7 +24,6 @@ classifiers =
     License :: OSI Approved :: MIT License
     Natural Language :: English
     Programming Language :: Python :: 3
-    Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
     Framework :: Django
@@ -37,7 +36,7 @@ classifiers =
     Topic :: Software Development :: Libraries :: Python Modules
 
 [options]
-python_requires = >=3.8
+python_requires = >=3.9
 include_package_data = True
 install_requires =
     django>=3.2,<5.0
@@ -109,13 +108,12 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{38,310}-django{32,42}-{no_api,api}
+envlist = py{39,310}-django{32,42}-{no_api,api}
 
 [testenv]
 deps =
     django32: Django>=3.2,<3.3
     django42: Django>=4.2,<5.0
-    py38-django32: backports.zoneinfo
     api: djangorestframework>=3.14.0
 
 commands =
