--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@
 ;;
 [metadata]
 name = django-blog-lotus
-version = 0.9.1
+version = 0.9.2-pre.1
 description = A weblog application with Django.
 long_description = file:README.rst
 long_description_content_type = text/x-rst
@@ -26,11 +26,14 @@ classifiers =
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.9
     Programming Language :: Python :: 3.10
+    Programming Language :: Python :: 3.11
     Framework :: Django
     Framework :: Django :: 3.2
     Framework :: Django :: 4.0
     Framework :: Django :: 4.1
     Framework :: Django :: 4.2
+    Framework :: Django :: 5.0
+    Framework :: Django :: 5.1
     Intended Audience :: Developers
     Topic :: Internet :: WWW/HTTP
     Topic :: Software Development :: Libraries :: Python Modules
@@ -39,9 +42,9 @@ classifiers =
 python_requires = >=3.9
 include_package_data = True
 install_requires =
-    django>=3.2,<5.0
+    django>=3.2,<5.2
     django-ckeditor>=6.0.0
-    django-taggit<5.0.0
+    django-taggit>=5.0.0
     django-autocomplete-light>=3.9.7
     django-smart-media>=0.2.2
     django-treebeard>=4.3,!=4.5
@@ -108,12 +111,13 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{39,310}-django{32,42}-{no_api,api}
+envlist = py{39,311}-django{32,42,51}-{no_api,api}
 
 [testenv]
 deps =
     django32: Django>=3.2,<3.3
     django42: Django>=4.2,<5.0
+    django51: Django>=5.1,<5.2
     api: djangorestframework>=3.14.0
 
 commands =
