--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,35 +5,38 @@
     "author": "David THENON <sveetch@gmail.com>",
     "private": true,
     "scripts": {
-        "css": "node-sass --include-path node_modules --output ../sandbox/static-sources/css/ ./scss/",
-        "css-prod": "node-sass --output-style compressed --include-path node_modules --output ../sandbox/static-sources/css/ ./scss/",
+        "css": "sass --load-path=./node_modules --silence-deprecation=color-functions --silence-deprecation=global-builtin --silence-deprecation=import --silence-deprecation=mixed-decls ./scss/:../sandbox/static-sources/css/",
+        "css-prod": "sass --style compressed --load-path=./node_modules ./scss/:../sandbox/static-sources/css/",
         "watch-css": "nodemon --watch scss/ --ext scss --exec \"npm run-script css\"",
         "js": "webpack --mode development --progress",
         "js-prod": "webpack --mode production --progress",
         "watch-js": "nodemon --watch js/ --ext js --exec \"npm run-script js\""
     },
     "dependencies": {
+        "@popperjs/core": "^2.11.8",
+        "bootstrap": "5.3.6",
+        "bootstrap-icons": "^1.11.3",
+        "sass-embedded": "^1.79.0"
+    },
+    "devDependencies": {
         "@babel/cli": "^7.14.8",
         "@babel/core": "^7.15.0",
         "@babel/preset-env": "^7.15.0",
-        "@popperjs/core": "^2.9.3",
-        "autoprefixer": "^10.3.0",
+        "autoprefixer": "^10.4.19",
         "babel-loader": "^8.2.2",
-        "bootstrap": "==5.2.3",
-        "bootstrap-icons": "^1.8.0",
         "jquery": "^3.6.0",
-        "lodash": "^4.17.21"
-    },
-    "devDependencies": {
-        "node-sass": "^7.0.1",
-        "nodemon": "^2.0.16",
+        "lodash": "^4.17.21",
+        "nodemon": "^3.1.4",
         "npm-run-all": "^4.1.5",
-        "webpack": "^5.50.0",
-        "webpack-cli": "^4.7.2"
+        "stylelint": "^16.6.1",
+        "stylelint-config-standard-scss": "^14.0.0",
+        "webpack": "^5.91.0",
+        "webpack-bundle-tracker": "^3.1.0",
+        "webpack-cli": "^5.1.4"
     },
     "engines": {
-        "node": ">= 16.0.0",
-        "npm": ">= 8.0.0"
+        "node": ">=18.14.0",
+        "npm": ">=10.0.0"
     },
     "browserslist": [
         ">= 0.5%",
