[CHG] Added support for Django 5.2 and DRF 3.16.x and update documentation

--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,7 @@ classifiers =
     Framework :: Django :: 4.2
     Framework :: Django :: 5.0
     Framework :: Django :: 5.1
+    Framework :: Django :: 5.2
     Intended Audience :: Developers
     Topic :: Internet :: WWW/HTTP
     Topic :: Software Development :: Libraries :: Python Modules
@@ -42,9 +43,9 @@ classifiers =
 python_requires = >=3.9
 include_package_data = True
 install_requires =
-    django>=3.2,<5.2
+    django>=3.2
     django-ckeditor>=6.0.0
-    django-taggit>=5.0.0
+    django-taggit>=3.1.0
     django-autocomplete-light>=3.9.7
     django-smart-media>=0.2.2
     django-treebeard>=4.3,!=4.5
@@ -111,14 +112,18 @@ testpaths =
 
 [tox:tox]
 minversion = 3.4.0
-envlist = py{39,311}-django{32,42,51}-{no_api,api}
+envlist =
+    {py39}-django{32,42}-{no_api,api314},
+    {py311}-django{42,52}-{no_api,api316},
 
 [testenv]
 deps =
     django32: Django>=3.2,<3.3
     django42: Django>=4.2,<5.0
     django51: Django>=5.1,<5.2
-    api: djangorestframework>=3.14.0
+    django52: Django>=5.2,<6.0
+    api314: djangorestframework>=3.14.0
+    api316: djangorestframework>=3.16.0
 
 commands =
     pip install -e .[breadcrumbs,dev]
